# kiosk

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: publish-core.yml  publish-tui.yml  release.yml  test.yml
kiosk/: Cargo.toml
kiosk-core/: Cargo.toml
kiosk-core/src/: action.rs  config.rs  constants.rs  event.rs  keyboard.rs  lib.rs  paths.rs  pending_delete.rs  state.rs
kiosk-core/src/agent/: detect.rs  mod.rs
kiosk-core/src/config/: keys.rs  mod.rs
kiosk-core/src/git/: cli.rs  mock.rs  mod.rs  provider.rs  repo.rs
kiosk-core/src/tmux/: cli.rs  mock.rs  mod.rs  provider.rs
kiosk-tui/: Cargo.toml
kiosk-tui/src/: app.rs  component.rs  keymap.rs  lib.rs  theme.rs
kiosk-tui/src/app/: actions.rs  mod.rs  spawn.rs
kiosk-tui/src/components/: branch_picker.rs  dialog.rs  error_bar.rs  error_toast.rs  help.rs  layout.rs  list_state.rs  mod.rs  new_branch.rs  path_input.rs  repo_list.rs  search_bar.rs  setup.rs
kiosk/src/: cli.rs  logging.rs  main.rs
kiosk/tests/: e2e.rs  e2e_agent.rs
scripts/: README.md  nightly-e2e.sh
src/: config.rs  git.rs  main.rs  tmux.rs  ui.rs
tests/: e2e.rs
xtask/: Cargo.toml
xtask/src/: build_readme.rs  main.rs
