[workspace]
members = ["kiosk", "kiosk-core", "kiosk-tui", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
kiosk-core = { version = "0.1.0", path = "kiosk-core" }
kiosk-tui = { version = "0.1.0", path = "kiosk-tui" }
serde = { version = "1", features = ["derive"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
