[workspace]
members = ["kiosk", "kiosk-core", "kiosk-tui", "xtask"]
default-members = ["kiosk"]
resolver = "3"

[workspace.package]
version = "0.2.2"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
kiosk-core = { version = "0.2.2", path = "kiosk-core" }
kiosk-tui = { version = "0.2.2", path = "kiosk-tui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
