[package]
name = "kiosk-core"
version.workspace = true
edition.workspace = true
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Core library for kiosk — tmux session manager with worktree support"
readme = "../README.md"
homepage = "https://github.com/thomasschafer/kiosk"
repository = "https://github.com/thomasschafer/kiosk"
keywords = ["cli", "tmux", "worktree", "git"]
categories = ["command-line-utilities"]

[dependencies]
anyhow.workspace = true
bitflags = "2"
crossterm = "0.29"
dirs = "6"
serde.workspace = true
toml = "1.0"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
