[package]
name = "kiosk-tui"
version.workspace = true
edition.workspace = true
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Terminal UI for kiosk — tmux session manager with worktree support"
readme = "../README.md"
homepage = "https://github.com/thomasschafer/kiosk"
repository = "https://github.com/thomasschafer/kiosk"
keywords = ["cli", "tmux", "worktree", "git"]
categories = ["command-line-utilities"]

[dependencies]
anyhow.workspace = true
crossterm = "0.29"
dirs = "6"
fuzzy-matcher = "0.3"
kiosk-core.workspace = true
ratatui = "0.30"
unicode-width = "0.2"
unicode-segmentation = "1"

[lints]
workspace = true
