[package]
name = "kiosk"
version.workspace = true
edition.workspace = true
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Tmux session manager with worktree support"
readme = "../README.md"
homepage = "https://github.com/thomasschafer/kiosk"
repository = "https://github.com/thomasschafer/kiosk"
keywords = ["cli", "tmux", "worktree", "git"]
categories = ["command-line-utilities"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
kiosk-core.workspace = true
kiosk-tui.workspace = true
ratatui = "0.30"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
