[package]
name = "kiosk"
version.workspace = true
edition.workspace = true
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Tmux session manager with worktree support"
readme = "../README.md"
homepage = "https://github.com/thomasschafer/kiosk"
repository = "https://github.com/thomasschafer/kiosk"
keywords = ["cli", "tmux", "worktree", "git"]
categories = ["command-line-utilities"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
dirs = "6"
dunce = "1.0.5"
kiosk-core.workspace = true
log = "0.4"
kiosk-tui.workspace = true
ratatui = "0.30"
serde.workspace = true
simple-log = "2.4"
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
